[tool.poetry]
name = "dendro-arc"
version = "0.1.0"
description = ""
authors = [
    "Jeremy Magland <jmagland@flatironinstitute.org>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
lindi = "^0.2.0"
dandi = "^0.60.0"

[tool.poetry.group.dev.dependencies]
pyright = "1.1.335"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
